# QtOpenGL

MyCodes/Tutorials/Tutorial2/Tutorial2/: GLWidget.cpp  GLWidget.h  GlWidget2.cpp  GlWidget2.h  Makefile  Makefile.Debug  Makefile.Release  MyResource.qrc  MyWorker.cpp  MyWorker.h  Tutorial2.pro  Widget.cpp  Widget.h  Widget.ui  kmeanslogic.cpp  kmeanslogic.h  ui_Widget.h
MyCodes/Tutorials/Tutorial2/build-Tutorial2-Desktop_Qt_5_12_12_MSVC2017_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_Widget.h
MyCodes/Tutorials/Tutorial2/build-Tutorial2-Desktop_Qt_5_12_12_MSVC2017_64bit-Profile/: Makefile  Makefile.Debug  Makefile.Release  ui_Widget.h
TutorialCode/DurateCode/DuCoralAnimation-master/: DuCoralAnimation.pro  DuCoralCharacter.cpp  DuCoralCharacter.h  DuCoralScene.cpp  DuCoralScene.h  DuDefines.h  DuThread.cpp  DuThread.h  DuUtil.cpp  DuUtil.h  Widget.cpp  Widget.h  Widget.ui  images.qrc  main.cpp
TutorialCode/GameProgrammingusingQt5BeginnersGuideSecondEdition_Code/: README.txt
TutorialCode/Others/3D-Simulator-of-Solar-System-master/: Parameters.txt
TutorialCode/Others/3D-Simulator-of-Solar-System-master/src/: AstronmicalObject.cpp  SolarSystem.cpp
TutorialCode/Others/simpleOpenGLGame-master/: CMakeLists.txt  LICENSE  README.md
TutorialCode/Others/simpleOpenGLGame-master/shaders/: effects.fs  effects.vs  particle.fs  particle.vs  sprite.fs  sprite.vs  text.frag  text.vert
TutorialCode/Others/simpleOpenGLGame-master/src/: CMakeLists.txt  ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  main.cpp  particle_generator.cpp  particle_generator.h  post_processing.cpp  post_processing.h  power_up.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
TutorialCode/TReed0803/QtOpenGL-master/Karma/: kadaptiveoctree.h
TutorialCode/TReed0803/QtOpenGL-master/KarmaView/: gbufferpass.h
TutorialCode/amidTutorial/: creating-a-skybox-using-c-qt-and-opengl.html
TutorialCode/amidTutorial/20160524GLBegin/GLBegin/: GLBegin.pro  GLBegin.pro.user.4.9-pre1  Makefile  Makefile.Debug  Makefile.Release  main.cpp  mainwindow.cpp  mainwindow.h  qglbegin.cpp  qglbegin.h  ui_mainwindow.h
(+27 files in other folders)
